BC-466: Add caseworker roles